@@ -19,5 +19,6 @@ EXPORTS
 	DPOTRS
 	DGETRS
 	DGETRF
+	DPPSV
 	DPOTRF
 	DSYEV
